hphp/hack/test/ifc/check/varray.php.exp
=== IFC analysis results for varray.php
File "varray.php", line 30, characters 5-39:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "varray.php", line 13, characters 24-32:
  This may be the data source with policy `PRIVATE`
  File "varray.php", line 5, characters 14-24:
  This may be the data sink with policy `PUBLIC`
File "varray.php", line 41, characters 5-38:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "varray.php", line 7, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "varray.php", line 11, characters 24-31:
  This may be the data sink with policy `PUBLIC`
File "varray.php", line 58, characters 5-39:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "varray.php", line 7, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "varray.php", line 11, characters 24-31:
  This may be the data sink with policy `PUBLIC`
File "varray.php", line 52, characters 5-39:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "varray.php", line 7, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "varray.php", line 11, characters 24-31:
  This may be the data sink with policy `PUBLIC`
File "varray.php", line 19, characters 5-44:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "varray.php", line 7, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "varray.php", line 11, characters 24-31:
  This may be the data sink with policy `PUBLIC`
